# fubanguy

./: .gitignore  LICENSE  README.md  audio_source.py  audio_source_pg_impl.py  character.py  delete_me.py  game.py  game_config.py  game_object.py  main.py  main.spec  player_controller.py  player_controller_pg_impl.py  pyproject.toml  requirements.txt  tips.txt  vector_2.py  window.py
audio_source/: music.py  sound.py
hooks/: hook-src_infra_assets.py
src/: main.py
src/adapters/: player_controller_pg_impl.py
src/adapters/py_game/: pygame_display.py  pygame_music.py  pygame_sound.py
src/application/dtos/: fighter_dto.py
src/application/use_cases/: animation_handler.py  control_use_case.py  fight_use_case.py  fighter_factory_use_case.py  game_engine.py  get_fighter_details.py  get_stage_details.py  set_sprites.py  stage_factory.py  update_health.py
src/core/: settings.py
src/core/interfaces/: collider.py  collision.py  control.py  controls.py  display.py  fighter.py  fighter_factory.py  game_display.py  music.py  renderer.py  sound.py
src/core/shared/: game_state.py  physic.py  vector_2.py
src/core/value_objects/: transform.py
src/data/: animation_data.py  control_data.py  fighter_data.py  stage_data.py
src/domain/entities/: animation.py  control.py  fighter.py  physic.py  sprite.py  stage.py
src/entities/: fighter.py  stage.py  transform.py  window.py
src/infra/: game_config.py
src/infra/assets/: scene_assets.py
src/ports/: game_display.py  music.py  sound.py
src/use_cases/: fight_use_case.py  game_engine.py
(+23 files in other folders)
