[tool.poetry]
name = "fubanguy"
version = "0.1.0"
description = ""
authors = ["MarcioJCarvalho <marciojosedecarvalho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pygame = "2.5.2"
pyinstaller = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
